--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
     "@babel/preset-react": "^7.18.6",
     "@testing-library/react": "^14.0.0",
     "babel-jest": "^29.5.0",
+    "env-cmd": "^10.1.0",
     "eslint-config-airbnb": "^19.0.4",
     "jest": "^27.5.1",
     "lint-staged": "^13.0.4",
